--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
                                     <a class="nav-link" href="index.html">Home</a>
                                 </li>
                                 <li class="nav-item">
-                                  <a class="nav-link" href="aboutus2.html">About Us</a>
+                                  <a class="nav-link" href="aboutus2.html">Contact Us</a>
                                 </li>
                                 <li class="nav-item">
-                                  <a class="nav-link" href="practice-area.html">Practice Area</a>
+                                  <a class="nav-link" href="practice-area.html">Our Services</a>
                                 </li>
                                 <li class="nav-item">
                                   <a class="nav-link" href="our-team.html">Our Team</a>
