--- a/aboutus2.html
+++ b/aboutus2.html
@@ -33,28 +33,14 @@
 
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav ml-auto">
-                            <li class="nav-item active dropdown">
+                            <li class="nav-item">
                                 <a class="nav-link" href="index.html">Home</a>
                             </li>
                             <li class="nav-item">
+                                <a class="nav-link" href="practice-area.html">Our Services</a>
+                            </li>
+                            <li class="nav-item active">
                                 <a class="nav-link" href="aboutus2.html">About Us</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="practice-area.html">Practice Area</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="our-team.html">Our Team</a>
-                            </li>
-                            <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown"
-                                   aria-haspopup="true" aria-expanded="false">
-                                    Blog
-                                </a>
-                                <div class="dropdown-menu">
-                                    <a class="dropdown-item" href="blog.html">Blog Normal</a>
-                                    <a class="dropdown-item" href="blog-grid.html">Blog Grid</a>
-                                    <a class="dropdown-item" href="blog-single.html">Blog Single</a>
-                                </div>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="contact.html">Contact Us</a>
@@ -391,6 +377,7 @@
             }
         }
     });
+
 
 </script>
 </body>
