--- a/contact.html
+++ b/contact.html
@@ -6,9 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- CSS -->
-    <link rel="stylesheet" href="assets/css/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/css/LineIcons.css">
-    <link rel="stylesheet" href="assets/css/theme.css">
+    <link rel="stylesheet" href="assets/css/bootstrap.min.css"/>
+    <link rel="stylesheet" href="assets/css/LineIcons.css"/>
+    <link rel="stylesheet" href="assets/css/animate.min.css"/>
+    <link rel="stylesheet" href="assets/owl-carousel/owl.carousel.min.css"/>
+    <link rel="stylesheet" href="assets/owl-carousel/owl.theme.default.min.css"/>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css"/>
+    <link rel="stylesheet" href="assets/css/theme.css"/>
+    <link rel="icon" href="assets/images/favicon.png" type="image/png" sizes="16x16"/>
 
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Jost:wght@400;500;600;700&family=Source+Sans+Pro:wght@300;400&display=swap" rel="stylesheet">
@@ -18,112 +23,60 @@
     <title>Contact Us | OneLaw</title>
   </head>
   <body>
-    <!-- =============
-      Header
-    ============== -->
-    <header class="header">
+  <header class="header-two">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12">
+          <nav class="navbar navbar-expand-lg navbar-dark">
+            <a class="navbar-brand" href="index.html">
+              <img src="assets/images/logo-light.png" alt="logo">
+            </a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse"
+                    data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
 
-      <!-- Header Top -->
-      <div class="header-top">
-        <div class="container">
-          <div class="row">
-            <div class="col-lg-3 col-md-6">
-              <p><i class="lni lni-phone"></i> +880 1941-000000</p>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+              <ul class="navbar-nav ml-auto">
+                <li class="nav-item">
+                  <a class="nav-link" href="index.html">Home</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="practice-area.html">Our Services</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="aboutus2.html">About Us</a>
+                </li>
+                <li class="nav-item active">
+                  <a class="nav-link" href="contact.html">Contact Us</a>
+                </li>
+              </ul>
             </div>
-            <div class="col-lg-3 col-md-6">
-              <p><i class="lni lni-envelope"></i> info@yourdomain.com</p>
-            </div>
-            <div class="col-lg-4 col-md-6">
-              <p><i class="lni lni-home"></i> G110, Sector-11, Pratap Vihar</p>
-            </div>
-            <div class="col-lg-2 col-md-6">
-              <p class="float-right">
-                <a href="#"><i class="lni lni-facebook"></i></a>
-                <a href="#"><i class="lni lni-twitter"></i></a>
-                <a href="#"><i class="lni lni-linkedin"></i></a>
-                <a href="#"><i class="lni lni-instagram"></i></a>
-              </p>
-            </div>
-          </div>
+          </nav>
         </div>
       </div>
-      <!-- Header Top /-->
+    </div>
+  </header>
 
-      <!-- Header Bottom -->
-      <div class="header-bottom">
-        <div class="container">
-          <div class="row">
-            <div class="col-lg-12">
-              <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                <a class="navbar-brand" href="index.html">
-                  <img src="assets/images/logo.png" alt="logo">
-                </a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                  <span class="navbar-toggler-icon"></span>
-                </button>
 
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                  <ul class="navbar-nav ml-auto">
-                    <li class="nav-item dropdown">
-                      <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Home</a>
-                      <div class="dropdown-menu">
-                          <a class="dropdown-item" href="index.html">Home One</a>
-                          <a class="dropdown-item" href="index-2.html">Home Two</a>
-                      </div>
-                  </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="aboutus2.html">About Us</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="practice-area.html">Practice Area</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="our-team.html">Our Team</a>
-                    </li>
-                    <li class="nav-item dropdown">
-                      <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Blog
-                      </a>
-                      <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="blog.html">Blog Normal</a>
-                        <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="blog-grid.html">Blog Grid</a>
-                        <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="blog-single.html">Blog Single</a>
-                      </div>
-                    </li>
-                    <li class="nav-item active">
-                      <a class="nav-link" href="contact.html">Contact Us <span class="sr-only">(current)</span></a>
-                    </li>
-                  </ul>
-                </div>
-              </nav>
-            </div>
-          </div>
+  <section class="breadcrumb-two text-center">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12">
+          <h1>Contact Us</h1>
+          <ul>
+            <li>
+              <a class="index.html">Home</a>
+            </li>
+            <li>/</li>
+            <li>Contact Us</li>
+          </ul>
         </div>
       </div>
-      <!-- Header Bottom /-->
-    </header>
-    <!-- =============
-      Header /
-    ============== -->
+    </div>
+  </section>
 
-    <!-- =============
-      Bredcrumb
-    ============== -->
-    <section class="bredcrumb">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-12 content">
-            <h1>Contact Us</h1>
-            <p><a href="index.html">Home</a> // Contact Us</p>
-          </div>
-        </div>
-      </div>
-    </section>
-    <!-- =============
-      Bredcrumb /
-    ============== -->
 
     <!-- =============
       Map
@@ -232,9 +185,12 @@
       Footer /
     ============== -->
     <!-- JS -->
-    <script src="assets/js/jquery.min.js"></script>
-    <script src="assets/js/popper.min.js"></script>
-    <script src="assets/js/bootstrap.bundle.js"></script>
-    <script src="assets/js/bootstrap.min.js"></script>
+
+  <script src="assets/js/jquery.min.js"></script>
+  <script src="assets/js/popper.min.js"></script>
+  <script src="assets/js/bootstrap.bundle.js"></script>
+  <script src="assets/js/bootstrap.min.js"></script>
+  <script src="assets/owl-carousel/owl.carousel.min.js"></script>
+  <script src="assets/js/wow.min.js"></script>
   </body>
 </html>
