--- a/index.html
+++ b/index.html
@@ -34,17 +34,14 @@
                       
                         <div class="collapse navbar-collapse" id="navbarSupportedContent">
                             <ul class="navbar-nav ml-auto">
-                                <li class="nav-item active dropdown">
+                                <li class="nav-item active">
                                     <a class="nav-link" href="index.html">Home</a>
-                                </li>
-                                <li class="nav-item">
-                                  <a class="nav-link" href="aboutus2.html">Contact Us</a>
                                 </li>
                                 <li class="nav-item">
                                   <a class="nav-link" href="practice-area.html">Our Services</a>
                                 </li>
                                 <li class="nav-item">
-                                  <a class="nav-link" href="our-team.html">Our Team</a>
+                                    <a class="nav-link" href="aboutus2.html">About Us</a>
                                 </li>
                                 <li class="nav-item">
                                   <a class="nav-link" href="contact.html">Contact Us</a>
