updated menu fix

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                                     <a class="nav-link" href="index.html">Home</a>
                                 </li>
                                 <li class="nav-item">
-                                  <a class="nav-link" href="practice-area.html">Our Services</a>
+                                  <a class="nav-link" href="practicearea.html">Our Services</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="aboutus2.html">About Us</a>
@@ -96,7 +96,7 @@
                     <h2>About Us</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer semper metus mi, sit amet cursus ante viverra nec. Vivamus luctus, ipsum eget ornare convallis, urna justo rutrum diam, eget tempus lorem ipsum a magna. consectetur adipiscing elit. Integer semper metus mi, sit amet cursus ante viverra nec.</p>
                     <p>Vivamus tempor sit amet ex ac sodales. In sit amet volutpat velit. Ut faucibus elit sed velit imperdiet, ac varius mauris faucibus.</p>
-                    <a href="#" class="glb-btn mt-2">Read More</a
+                    <a href="#" class="glb-btn mt-2">Read More</a>
                 </div>
             </div>
         </div>
