--- a/our-team.html
+++ b/our-team.html
@@ -76,7 +76,7 @@
                       <a class="nav-link" href="aboutus2.html">About Us</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="practice-area.html">Practice Area</a>
+                      <a class="nav-link" href="practicearea.html">Practice Area</a>
                     </li>
                     <li class="nav-item active">
                       <a class="nav-link" href="our-team.html">Our Team <span class="sr-only">(current)</span></a>
