--- a/practicearea.html
+++ b/practicearea.html
@@ -3,17 +3,17 @@
 <html lang="en">
 <head>
 
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <meta charset="utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
 
-    <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="assets/css/LineIcons.css" />
-    <link rel="stylesheet" href="assets/css/animate.min.css" />
-    <link rel="stylesheet" href="assets/owl-carousel/owl.carousel.min.css" />
-    <link rel="stylesheet" href="assets/owl-carousel/owl.theme.default.min.css" />
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css" />
-    <link rel="stylesheet" href="assets/css/theme.css" />
-    <link rel="icon" href="assets/images/favicon.png" type="image/png" sizes="16x16" />
+    <link rel="stylesheet" href="assets/css/bootstrap.min.css"/>
+    <link rel="stylesheet" href="assets/css/LineIcons.css"/>
+    <link rel="stylesheet" href="assets/css/animate.min.css"/>
+    <link rel="stylesheet" href="assets/owl-carousel/owl.carousel.min.css"/>
+    <link rel="stylesheet" href="assets/owl-carousel/owl.theme.default.min.css"/>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css"/>
+    <link rel="stylesheet" href="assets/css/theme.css"/>
+    <link rel="icon" href="assets/images/favicon.png" type="image/png" sizes="16x16"/>
     <title>ONELAW</title>
 </head>
 <body>
@@ -24,38 +24,41 @@
             <div class="col-lg-12">
                 <nav class="navbar navbar-expand-lg navbar-dark">
                     <a class="navbar-brand" href="index.html">
-                        <img src="assets/images/logo-light.png" alt="logo" />
+                        <img src="assets/images/logo-light.png" alt="logo">
                     </a>
-                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <button class="navbar-toggler" type="button" data-toggle="collapse"
+                            data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                            aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
+
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav ml-auto">
                             <li class="nav-item">
                                 <a class="nav-link" href="index.html">Home</a>
                             </li>
                             <li class="nav-item active">
-                                <a class="nav-link" href="practice-area.html">Our Services</a>
+                                <a class="nav-link" href="practicearea.html">Our Services</a>
                             </li>
-                            <li class="nav-item">
+                            <li class="nav-item ">
                                 <a class="nav-link" href="aboutus2.html">About Us</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="contact.html">Contact Us</a>
                             </li>
                         </ul>
-                    </div>                </nav>
+                    </div>
+                </nav>
             </div>
         </div>
     </div>
 </header>
 
-
 <section class="breadcrumb-two text-center">
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
-                <h1>Our Services</h1>
+                <h1>Serv</h1>
                 <ul>
                     <li>
                         <a class="index.html">Home</a>
@@ -308,12 +311,13 @@
     </section>
 </footer>
 
-<script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script src="assets/js/jquery.min.js" type="b7a21bd14d0b508998eef27e-text/javascript"></script>
-<script src="assets/js/popper.min.js" type="b7a21bd14d0b508998eef27e-text/javascript"></script>
-<script src="assets/js/bootstrap.bundle.js" type="b7a21bd14d0b508998eef27e-text/javascript"></script>
-<script src="assets/js/bootstrap.min.js" type="b7a21bd14d0b508998eef27e-text/javascript"></script>
-<script src="assets/owl-carousel/owl.carousel.min.js" type="b7a21bd14d0b508998eef27e-text/javascript"></script>
-<script src="assets/js/wow.min.js" type="b7a21bd14d0b508998eef27e-text/javascript"></script>
+<script src="assets/js/jquery.min.js"></script>
+<script src="assets/js/popper.min.js"></script>
+<script src="assets/js/bootstrap.bundle.js"></script>
+<script src="assets/js/bootstrap.min.js"></script>
+<script src="assets/owl-carousel/owl.carousel.min.js"></script>
+<script src="assets/js/wow.min.js"></script>
+
 <script type="b7a21bd14d0b508998eef27e-text/javascript">
         new WOW().init();
         $(".award-slider").owlCarousel({
@@ -340,5 +344,4 @@
             },
         });
     </script>
-<script src="/cdn-cgi/scripts/7d0fa10a/cloudflare-static/rocket-loader.min.js" data-cf-settings="b7a21bd14d0b508998eef27e-|49" defer></script></body>
 </html>
