--- a/contact.html
+++ b/contact.html
@@ -43,7 +43,7 @@
                   <a class="nav-link" href="index.html">Home</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="practice-area.html">Our Services</a>
+                  <a class="nav-link" href="practicearea.html">Our Services</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="aboutus2.html">About Us</a>
