updated menu fix 2

--- a/practicearea.html
+++ b/practicearea.html
@@ -227,9 +227,8 @@
                         </div>
                         <ul>
                             <li><i class="far fa-clone"></i><a href="#">About Us</a></li>
-                            <li><i class="far fa-clone"></i><a href="#">Services</a></li>
+                            <li><i class="far fa-clone"></i><a href="#">Our Services</a></li>
                             <li><i class="far fa-clone"></i><a href="#">Portfolio</a></li>
-                            <li><i class="far fa-clone"></i><a href="#">Blog</a></li>
                             <li><i class="far fa-clone"></i><a href="#">Contact</a></li>
                         </ul>
                     </div>
