--- a/practicearea.html
+++ b/practicearea.html
@@ -58,7 +58,7 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
-                <h1>Serv</h1>
+                <h1>Our Services</h1>
                 <ul>
                     <li>
                         <a class="index.html">Home</a>
