updated menu color fix

--- a/our-team.html
+++ b/our-team.html
@@ -26,7 +26,7 @@
 
       <!-- Header Top -->
       <div class="header-top">
-        <div class="container">
+        <div class="container" style="background-color: rgba(0,0,0,1);">
           <div class="row">
             <div class="col-lg-3 col-md-6">
               <p><i class="lni lni-phone"></i> +880 1941-000000</p>
