--- a/aboutus2.html
+++ b/aboutus2.html
@@ -18,7 +18,7 @@
 <body>
 
 <header class="header-two">
-    <div class="container">
+    <div class="container" style="background-color: rgba(0,0,0,1);">
         <div class="row">
             <div class="col-lg-12">
                 <nav class="navbar navbar-expand-lg navbar-dark">
