--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,7 @@
   </head>
   <body>
   <header class="header-two">
-    <div class="container">
+    <div class="container" style="background-color: rgba(0,0,0,1);">
       <div class="row">
         <div class="col-lg-12">
           <nav class="navbar navbar-expand-lg navbar-dark">
