updated menu color fix

--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
 
     <link rel="icon" href="assets/images/favicon.png" type="image/png" sizes="16x16">
 
-    <title>Contact Us | OneLaw</title>
+    <title>Contact Us | Rera QLH</title>
   </head>
   <body>
   <header class="header-two">
@@ -164,7 +164,7 @@
             </div>
             <div class="col-lg-6">
               <div class="footer-widget">
-                <h3>About OneLaw</h3>
+                <h3>About Rera QLH</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
                 tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
                 quis nostrud exercitation ullamco laboris nisi ut aliquip.</p>
