--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-lg-7 pr-lg-5">
-                    <h1>WELCOME TO <span>ONELAW</span></h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas vel est vitae enim varius ornare ut vel nisl. Documentation and examples for opting images into responsive behavior.</p>
-                    <a href="#" class="btn">Lets Explore</a>
+                    <h1>WELCOME TO </br><span>Rera QLH</span></h1>
+                    <p>We are serving as Legal Service Platform Since 2018, having expertise in real estate law (RERA) and specialize in property disputes between builders and buyers.</p>
+                    <a href="practicearea.html" class="btn">Lets Explore</a>
                     <div class="d-flex flex-row justify-content-center counter mt-5">
                         <div class="col-4">
                             <h2>12+</h2>
@@ -94,9 +94,8 @@
                 </div>
                 <div class="col-lg-6 pl-lg-5">
                     <h2>About Us</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer semper metus mi, sit amet cursus ante viverra nec. Vivamus luctus, ipsum eget ornare convallis, urna justo rutrum diam, eget tempus lorem ipsum a magna. consectetur adipiscing elit. Integer semper metus mi, sit amet cursus ante viverra nec.</p>
-                    <p>Vivamus tempor sit amet ex ac sodales. In sit amet volutpat velit. Ut faucibus elit sed velit imperdiet, ac varius mauris faucibus.</p>
-                    <a href="#" class="glb-btn mt-2">Read More</a>
+                    <p>Quick Legal Help (QLH)is a full-Legal Service Platform, providing an extensive range of legal services on various law related issues. Our Offices are providing best and expert legal services to its Domestic as well as International Clients. QLH is the one from which you can seek holistic legal assistance on both civil and criminal matters. The amount of legal services that it is providing to its clients makes it one of the top firms in Delhi NCR. Today it has become the beacon of trust and transparency. Hence, if you are thinking you need effective and concrete legal solutions to your problems, connect with the QLH.</p>
+                    <p>Our best Rera attorney in Delhi NCR are committed to assisting our clients in remaining in front of regulatory changes across several states and in compliance. Leading real estate companies regularly use our well regarded multidisciplinary groups with deep expertise for qualitative, monetary, advertising, legal, administrative assistance, and many other services.</p>
                 </div>
             </div>
         </div>
@@ -111,7 +110,7 @@
                     <h2>What can we help you with</h2>
                 </div>
                 <div class="col-lg-6 ml-auto">
-                    <p class="ml-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer semper metus mi, sit amet cursus ante viverra nec. Vivamus luctus, ipsum eget ornare convallis .</p>
+                    <p class="ml-3">We provide excellent answers to assist you in overcoming any obstacle in your real estate endeavour as one of the respected legal service providers for RERA services in the nation.</p>
                 </div>
             </div>
             <div class="row">
