--- a/our-team.html
+++ b/our-team.html
@@ -16,7 +16,7 @@
 
     <link rel="icon" href="assets/images/favicon.png" type="image/png" sizes="16x16">
 
-    <title>Our Team | OneLaw</title>
+    <title>Our Team | Rera QLH</title>
   </head>
   <body>
     <!-- =============
@@ -321,7 +321,7 @@
             </div>
             <div class="col-lg-6">
               <div class="footer-widget">
-                <h3>About OneLaw</h3>
+                <h3>About Rera QLH</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
                 tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
                 quis nostrud exercitation ullamco laboris nisi ut aliquip.</p>
