--- a/aboutus2.html
+++ b/aboutus2.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css"/>
     <link rel="stylesheet" href="assets/css/theme.css"/>
     <link rel="icon" href="assets/images/favicon.png" type="image/png" sizes="16x16"/>
-    <title>ONELAW</title>
+    <title>Rera QLH</title>
 </head>
 <body>
 
