--- a/index.html
+++ b/index.html
@@ -185,200 +185,14 @@
             <div class="row">
                 <div class="col-lg-7 mx-auto text-center">
                     <img src="assets/images/logo.png" alt="logo">
-                    <h6 class="my-3">24+ YEARS OF EXPERIENCE</h6>
-                    <h1>Need An Advice From Expert Attorney</h1>
-                    <h2>+786 (876) 765 656</h2>
+                    <h6 class="my-3">10+ YEARS OF EXPERIENCE</h6>
+                    <h1>Need An Advice From Expert</h1>
+                    <h2>+91 9958391877</h2>
                 </div>
             </div>
         </div>
     </section>
     <!--CTA End-->
-
-    <!-- Case Study Start -->
-    <section class="section casestudy-two">
-        <div class="container">
-            <div class="row mb-lg-4 mb-md-4  mb-sm-4 mb-3 align-items-center">
-                <div class="col-lg-4">
-                    <h2>Which cases we sloved for clients</h2>
-                </div>
-                <div class="col-lg-6 ml-auto">
-                    <p class="ml-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer semper metus mi, sit amet cursus ante viverra nec. Vivamus luctus, ipsum eget ornare convallis .</p>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-4 col-sm-6 my-3">
-                  <div class="cases">
-                    <img src="assets/images/case-1.png" alt="cases" class="img-fluid">
-                    <div class="content">
-                        <a href="#"><i class="lni lni-arrow-right"></i></a>
-                      <h3>Public Company Fraud</h3>
-                      <p>Vivamus luctus, ipsum eget ornare convallis. sit amet cursus ante nec viverra amet.</p>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-lg-4 col-sm-6 my-3">
-                  <div class="cases">
-                    <img src="assets/images/case-2.png" alt="cases" class="img-fluid">
-                    <div class="content">
-                        <a href="#"><i class="lni lni-arrow-right"></i></a>
-                      <h3>Information Fraud Case</h3>
-                      <p>Vivamus luctus, ipsum eget ornare convallis. sit amet cursus ante nec viverra amet.</p>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-lg-4 col-sm-6 my-3">
-                  <div class="cases">
-                    <img src="assets/images/case-3.png" alt="cases" class="img-fluid">
-                    <div class="content">
-                        <a href="#"><i class="lni lni-arrow-right"></i></a>
-                      <h3>MaTix Tax Invation</h3>
-                      <p>Vivamus luctus, ipsum eget ornare convallis. sit amet cursus ante nec viverra amet.</p>
-                    </div>
-                  </div>
-                </div>
-              </div>
-        </div>
-    </section>
-    <!-- Case Study End -->
-
-    <!-- Team Start-->
-    <section class="section team-two">
-        <div class="container">
-            <div class="row mb-lg-4 mb-md-4 mb-sm-4 mb-3 align-items-center">
-                <div class="col-lg-5">
-                    <h2>We have the best lawyers in the city</h2>
-                </div>
-                <div class="col-lg-6 ml-auto pl-3">
-                    <p class="ml-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer semper metus mi, sit amet cursus ante viverra nec. Vivamus luctus, ipsum eget ornare convallis .</p>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-4 col-md-6 teams my-3">
-                  <img src="assets/images/team-1.jpg" alt="team" class="img-fluid">
-                  <div class="details">
-                    <h4>Richard Pearson</h4>
-                    <h6>Financial lawyer</h6>
-                    <p>
-                      <a href="#"><i class="lni lni-facebook"></i></a>
-                      <a href="#"><i class="lni lni-twitter"></i></a>
-                      <a href="#"><i class="lni lni-linkedin"></i></a>
-                      <a href="#"><i class="lni lni-instagram"></i></a>
-                    </p>
-                  </div>            
-                </div>
-                <div class="col-lg-4 col-md-6 teams my-3">
-                  <img src="assets/images/team-2.jpg" alt="team" class="img-fluid">
-                  <div class="details">
-                    <h4>Christian Blair</h4>
-                    <h6>Insurance lawyer</h6>
-                    <p>
-                      <a href="#"><i class="lni lni-facebook"></i></a>
-                      <a href="#"><i class="lni lni-twitter"></i></a>
-                      <a href="#"><i class="lni lni-linkedin"></i></a>
-                      <a href="#"><i class="lni lni-instagram"></i></a>
-                    </p>
-                  </div>            
-                </div>
-                <div class="col-lg-4 col-md-6 teams my-3">
-                  <img src="assets/images/team-3.jpg" alt="team" class="img-fluid">
-                  <div class="details">
-                    <h4>Emma Stoun</h4>
-                    <h6>Criminal Lawyer</h6>
-                    <p>
-                      <a href="#"><i class="lni lni-facebook"></i></a>
-                      <a href="#"><i class="lni lni-twitter"></i></a>
-                      <a href="#"><i class="lni lni-linkedin"></i></a>
-                      <a href="#"><i class="lni lni-instagram"></i></a>
-                    </p>
-                  </div>            
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- Team End-->
-
-    <!--Award Start-->
-    <section class="award section bg-dark">
-        <div class="container">
-            <div class="row align-items-center">
-                <div class="col-lg-6 col-sm-6">
-                    <img src="assets/images/cer1.png" class="img-fluid certificate" alt="certficate">
-                </div>
-                <div class="col-lg-6 col-sm-6 pl-lg-5">
-                    <h1>Our Archivements</h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer semper metus mi, sit amet cursus ante viverra nec.</p>
-                    <div class="owl-carousel owl-theme award-slider">
-                        <div class="item">
-                            <img src="assets/images/aw1.png" class="my-4" alt="award">
-                        </div>
-                        <div class="item">
-                            <img src="assets/images/aw1.png" class="my-4" alt="award">
-                        </div>
-                        <div class="item">
-                            <img src="assets/images/aw1.png" class="my-4" alt="award">
-                        </div>
-                        <div class="item">
-                            <img src="assets/images/aw1.png" class="my-4" alt="award">
-                        </div>
-                        <div class="item">
-                            <img src="assets/images/aw1.png" class="my-4" alt="award">
-                        </div>
-                        <div class="item">
-                            <img src="assets/images/aw1.png" class="my-4" alt="award">
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!--Award End-->
-
-    <!--Blog Start-->
-    <section class="blog-two section">
-        <div class="container">
-            <div class="row mb-lg-4 mb-md-4 mb-sm-4 mb-3 align-items-center">
-                <div class="col-6">
-                    <h2>Latest News</h2>
-                </div>
-                <div class="col-6">
-                    <h6><a href="blog.html" class="blog-btn float-right">More News</a></h6>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-4 col-sm-6">
-                    <div class="blogs my-3">
-                        <a href="blog-single.html"><img src="assets/images/news-1.png" class="img-fluid" alt="news"></a>
-                        <div class="content p-4">
-                            <h4>We made great deal with new clients</h4>
-                            <p>Lorem ipsum dolor sit amet, consec adipisicing elit, sed do eiusmod tem incididunt ut labore et dolore magna aliqua sit amet.</p>
-                            <a href="blog-single.html" class="glb-btn">Read More</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-sm-6">
-                    <div class="blogs my-3">
-                        <a href="blog-single.html"><img src="assets/images/news-2.png" class="img-fluid" alt="news"></a>
-                        <div class="content p-4">
-                            <h4>Goverment pass a new law for arms</h4>
-                            <p>Lorem ipsum dolor sit amet, consec adipisicing elit, sed do eiusmod tem incididunt ut labore et dolore magna aliqua sit amet.</p>
-                            <a href="blog-single.html" class="glb-btn">Read More</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-sm-6">
-                    <div class="blogs my-3">
-                        <a href="blog-single.html"><img src="assets/images/news-3.png" class="img-fluid" alt="news"></a>
-                        <div class="content p-4">
-                            <h4>New Laywer join in our team yesterday</h4>
-                            <p>Lorem ipsum dolor sit amet, consec adipisicing elit, sed do eiusmod tem incididunt ut labore et dolore magna aliqua sit amet.</p>
-                            <a href="blog-single.html" class="glb-btn">Read More</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!--Blog End-->
 
     <footer class="footer-two">
         <section class="footer-top-two bg-dark">
@@ -389,7 +203,7 @@
                             <div class="widget_title">
                                 <h4>About Us</h4>
                             </div>
-                            <p>Quisque orci nisl, viverra et sem ac, tincidunt egestas massa. Morbi est arcu, hendr erit ac vehicula condi, euismod nec tortor praesent urna consequat.</p>
+                            <p>Our best RERA attorney in Delhi NCR are committed to assisting our clients in remaining in front of regulatory changes across several states and in compliance</p>
                         </div>
                     </div>
                     <div class="col-lg-2 col-sm-6">
@@ -398,11 +212,9 @@
                                 <h4>Links</h4>
                             </div>
                             <ul>
-                                <li><i class="far fa-clone"></i><a href="#">About Us</a></li>
-                                <li><i class="far fa-clone"></i><a href="#">Services</a></li>
-                                <li><i class="far fa-clone"></i><a href="#">Portfolio</a></li>
-                                <li><i class="far fa-clone"></i><a href="#">Blog</a></li>
-                                <li><i class="far fa-clone"></i><a href="#">Contact</a></li>
+                                <li><i class="far fa-clone"></i><a href="aboutus2.html">About Us</a></li>
+                                <li><i class="far fa-clone"></i><a href="practicearea.html">Services</a></li>
+                                <li><i class="far fa-clone"></i><a href="contact.html">Contact</a></li>
                             </ul>
                         </div>
                     </div>
@@ -417,7 +229,7 @@
                                         <i class="fas fa-phone-alt"></i>
                                     </div>
                                     <div class="info">
-                                        <p><a href="tel:+919246147999">1800-121-3637</a></p>
+                                        <p><a href="tel:+919958391877">+91 9958391877</a></p>
                                     </div>
                                 </div>
                                 <div class="single_info">
@@ -425,7 +237,7 @@
                                         <i class="fas fa-envelope"></i>
                                     </div>
                                     <div class="info">
-                                        <p><a href="mailto:info@deneb.com">info@deneb.com</a></p>
+                                        <p><a href="mailto:info@deneb.com">info@quicklegalhelp.com</a></p>
                                     </div>
                                 </div>
                                 <div class="single_info">
@@ -433,7 +245,7 @@
                                         <i class="fas fa-map-marker-alt"></i>
                                     </div>
                                     <div class="info">
-                                        <p><a href="#">Park street aven, Brocklyn,<span>Newyork.</span></a> </p>
+                                        <p><a href="#">Jaypee Kosmos, Sector-134,<span>Noida.</span></a> </p>
                                     </div>
                                 </div>
                             </div>
@@ -460,13 +272,11 @@
                     <div class="col-lg-6 col-sm-4">
                         <ul class="social mt-3">
                             <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-                            <li><a href="#"><i class="fab fa-twitter"></i></a></li>
                             <li><a href="#"><i class="fab fa-instagram"></i></a></li>
-                            <li><a href="#"><i class="fab fa-linkedin"></i></a></li>
                         </ul>
                     </div>
                     <div class="col-lg-6 pt-2 col-sm-8">
-                        <p>© 2016 - 2020 THEMELEAF. ALL RIGHTS RESERVED.</p>
+                        <p>© 2022 - 2026 QLH. ALL RIGHTS RESERVED.</p>
                     </div>
                 </div>
             </div>
