--- a/practicearea.html
+++ b/practicearea.html
@@ -147,168 +147,9 @@
     </div>
 </section>
 
-
-<section class="section casestudy-two">
-    <div class="container">
-        <div class="row mb-lg-4 mb-md-4 mb-sm-4 mb-3 align-items-center">
-            <div class="col-lg-4">
-                <h2>Which cases we sloved for clients</h2>
-            </div>
-            <div class="col-lg-6 ml-auto">
-                <p class="ml-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer semper metus mi, sit amet cursus ante viverra nec. Vivamus luctus, ipsum eget ornare convallis .</p>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-lg-4 col-sm-6 my-3">
-                <div class="cases">
-                    <img src="assets/images/case-1.png" alt="cases" class="img-fluid" />
-                    <div class="content">
-                        <a href="#"><i class="lni lni-arrow-right"></i></a>
-                        <h3>Public Company Fraud</h3>
-                        <p>Vivamus luctus, ipsum eget ornare convallis. sit amet cursus ante nec viverra amet.</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-4 col-sm-6 my-3">
-                <div class="cases">
-                    <img src="assets/images/case-2.png" alt="cases" class="img-fluid" />
-                    <div class="content">
-                        <a href="#"><i class="lni lni-arrow-right"></i></a>
-                        <h3>Information Fraud Case</h3>
-                        <p>Vivamus luctus, ipsum eget ornare convallis. sit amet cursus ante nec viverra amet.</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-4 col-sm-6 my-3">
-                <div class="cases">
-                    <img src="assets/images/case-3.png" alt="cases" class="img-fluid" />
-                    <div class="content">
-                        <a href="#"><i class="lni lni-arrow-right"></i></a>
-                        <h3>MaTix Tax Invation</h3>
-                        <p>Vivamus luctus, ipsum eget ornare convallis. sit amet cursus ante nec viverra amet.</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
-
-
-<section class="section cta">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-7 mx-auto text-center">
-                <img src="assets/images/logo.png" alt="logo" />
-                <h6 class="my-3">24+ YEARS OF EXPERIENCE</h6>
-                <h1>Need An Advice From Expert Attorney</h1>
-                <h2>+786 (876) 765 656</h2>
-            </div>
-        </div>
-    </div>
-</section>
-
-
-<footer class="footer-two">
-    <section class="footer-top-two bg-dark">
-        <div class="container">
-            <div class="row widget_wrapper">
-                <div class="col-lg-3 col-sm-6">
-                    <div class="widget widegt_about">
-                        <div class="widget_title">
-                            <h4>About Us</h4>
-                        </div>
-                        <p>Quisque orci nisl, viverra et sem ac, tincidunt egestas massa. Morbi est arcu, hendr erit ac vehicula condi, euismod nec tortor praesent urna consequat.</p>
-                    </div>
-                </div>
-                <div class="col-lg-2 col-sm-6">
-                    <div class="widget widget_link">
-                        <div class="widget_title">
-                            <h4>Links</h4>
-                        </div>
-                        <ul>
-                            <li><i class="far fa-clone"></i><a href="#">About Us</a></li>
-                            <li><i class="far fa-clone"></i><a href="#">Our Services</a></li>
-                            <li><i class="far fa-clone"></i><a href="#">Portfolio</a></li>
-                            <li><i class="far fa-clone"></i><a href="#">Contact</a></li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-sm-6">
-                    <div class="widget widget_contact">
-                        <div class="widget_title">
-                            <h4>Contact Us</h4>
-                        </div>
-                        <div class="contact_info">
-                            <div class="single_info">
-                                <div class="icon">
-                                    <i class="fas fa-phone-alt"></i>
-                                </div>
-                                <div class="info">
-                                    <p><a href="tel:+919246147999">1800-121-3637</a></p>
-                                </div>
-                            </div>
-                            <div class="single_info">
-                                <div class="icon">
-                                    <i class="fas fa-envelope"></i>
-                                </div>
-                                <div class="info">
-                                    <p><a href="/cdn-cgi/l/email-protection#e28b8c848da286878c8780cc818d8f"><span class="__cf_email__" data-cfemail="234a4d454c6347464d46410d404c4e">[email&#160;protected]</span></a></p>
-                                </div>
-                            </div>
-                            <div class="single_info">
-                                <div class="icon">
-                                    <i class="fas fa-map-marker-alt"></i>
-                                </div>
-                                <div class="info">
-                                    <p>
-                                        <a href="#">Park street aven, Brocklyn,<span>Newyork.</span></a>
-                                    </p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-sm-6">
-                    <div class="widget">
-                        <div class="widget_title">
-                            <h4>Subscribe</h4>
-                        </div>
-                        <p>Quisque orci nisl, viverra et sem ac, tincidunt egestas massa.</p>
-                        <form>
-                            <input type="email" class="form_control mb-4" placeholder="Your Email" />
-                            <button type="submit" class="btn">Subscribe</button>
-                        </form>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <section class="footer-bottom bg-dark py-4">
-        <div class="container">
-            <div class="row align-items-center">
-                <div class="col-lg-6 col-sm-4">
-                    <ul class="social mt-3">
-                        <li>
-                            <a href="#"><i class="fab fa-facebook-f"></i></a>
-                        </li>
-                        <li>
-                            <a href="#"><i class="fab fa-twitter"></i></a>
-                        </li>
-                        <li>
-                            <a href="#"><i class="fab fa-instagram"></i></a>
-                        </li>
-                        <li>
-                            <a href="#"><i class="fab fa-linkedin"></i></a>
-                        </li>
-                    </ul>
-                </div>
-                <div class="col-lg-6 pt-2 col-sm-8">
-                    <p>© 2016 - 2020 THEMELEAF. ALL RIGHTS RESERVED.</p>
-                </div>
-            </div>
-        </div>
-    </section>
-</footer>
+<div id="iframeDiv">
+    <iframe width="100%" height="1120" src="footer.html" style="border:none;overflow: hidden;"></iframe>
+</div>
 
 <script src="assets/js/jquery.min.js"></script>
 <script src="assets/js/popper.min.js"></script>
