--- a/footer.html
+++ b/footer.html
@@ -14,22 +14,6 @@
     <title>footer</title>
 </head>
 <body>
-
-<!--CTA Start-->
-<section class="section cta">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-7 mx-auto text-center">
-                <img src="assets/images/logo.png" alt="logo">
-                <h6 class="my-3">10+ YEARS OF EXPERIENCE</h6>
-                <h1>Need An Advice From Expert</h1>
-                <h2>+91 9958391877</h2>
-            </div>
-        </div>
-    </div>
-</section>
-<!--CTA End-->
-
 <footer class="footer-two">
     <section class="footer-top-two bg-dark">
         <div class="container">
@@ -74,7 +58,7 @@
                                     <i class="fas fa-envelope"></i>
                                 </div>
                                 <div class="info">
-                                    <p><a href="mailto:info@deneb.com">info@quicklegalhelp.com</a></p>
+                                    <p><a href="mailto:info@quicklegalhelp.com">info@quicklegalhelp.com</a></p>
                                 </div>
                             </div>
                             <div class="single_info">
@@ -82,7 +66,7 @@
                                     <i class="fas fa-map-marker-alt"></i>
                                 </div>
                                 <div class="info">
-                                    <p><a href="#">Jaypee Kosmos, Sector-134,<span>Noida.</span></a></p>
+                                    <p><a href="#">Jaypee Kosmos, Sector-134,<span>Noida-201304.</span></a></p>
                                 </div>
                             </div>
                         </div>
@@ -93,7 +77,7 @@
                         <div class="widget_title">
                             <h4>Subscribe</h4>
                         </div>
-                        <p>Subscribe for latest legal news and Updates from us.</p>
+                        <p>Subscribe for latest news and Updates from us.</p>
                         <form>
                             <input type="email" class="form_control mb-4" placeholder="Your Email">
                             <button type="submit" class="btn">Subscribe</button>
