--- a/contact.html
+++ b/contact.html
@@ -117,11 +117,10 @@
           </div>
           <div class="col-lg-4 info">
             <ul>
-              <li><i class="lni lni-phone"></i> +880 1941-00000</li>
-              <li><i class="lni lni-phone-set"></i> +880 432-0000</li>
-              <li><i class="lni lni-envelope"></i> support@yourdomain.com</li>
-              <li><i class="lni lni-laptop-phone"></i> 787-788-7346</li>
-              <li><i class="lni lni-map-marker"></i>  G110, Sector-11, Pratap Vihar, India</li>
+              <li><i class="lni lni-phone"></i> +91 9958391877</li>
+              <li><i class="lni lni-phone-set"></i> +91 9958391877</li>
+              <li><i class="lni lni-envelope"></i> info@quicklegalhelp.com</li>
+              <li><i class="lni lni-map-marker"></i>Jaypee Kosmos, Sector 134, Noida-201304</li>
             </ul>
           </div>
         </div>
@@ -129,61 +128,13 @@
     </section>
     <!-- =============
       Contact /
-    ============== -->    
+    ============== -->
 
-    <!-- =============
-      Footer /
-    ============== -->
-    <footer class="footer">
-      <section class="section footer-top">
-        <div class="container">
-          <div class="row">
-            <div class="col-lg-3">
-              <div class="footer-widget">
-                <h3>Quick Links</h3>
-                <ul>
-                  <li><a href="#"><i class="lni lni-spiner-solid"></i> About Us</a></li>
-                  <li><a href="#"><i class="lni lni-spiner-solid"></i> Contact Us</a></li>
-                  <li><a href="#"><i class="lni lni-spiner-solid"></i> FAQS</a></li>
-                  <li><a href="#"><i class="lni lni-spiner-solid"></i> Privacy Policy</a></li>
-                  <li><a href="#"><i class="lni lni-spiner-solid"></i> Data Policy</a></li>
-                </ul>
-              </div>
-            </div>
-            <div class="col-lg-3">
-              <div class="footer-widget">
-                <h3>Important Links</h3>
-                <ul>
-                  <li><a href="#"><i class="lni lni-spiner-solid"></i> About Us</a></li>
-                  <li><a href="#"><i class="lni lni-spiner-solid"></i> Contact Us</a></li>
-                  <li><a href="#"><i class="lni lni-spiner-solid"></i> FAQS</a></li>
-                  <li><a href="#"><i class="lni lni-spiner-solid"></i> Privacy Policy</a></li>
-                  <li><a href="#"><i class="lni lni-spiner-solid"></i> Data Policy</a></li>
-                </ul>
-              </div>
-            </div>
-            <div class="col-lg-6">
-              <div class="footer-widget">
-                <h3>About Rera QLH</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                quis nostrud exercitation ullamco laboris nisi ut aliquip.</p>
-                <p>
-                  <a href="#"><i class="lni lni-facebook"></i></a>
-                  <a href="#"><i class="lni lni-twitter"></i></a>
-                  <a href="#"><i class="lni lni-linkedin"></i></a>
-                  <a href="#"><i class="lni lni-instagram"></i></a>
-                </p>
-                <p>© 2016 - 2020 ThemeLeaf. All Rights Reserved.</p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
-    </footer>
-    <!-- =============
-      Footer /
-    ============== -->
+  <div id="iframeDiv">
+    <iframe width="100%" height="600" src="advice_white.html" style="border:none;overflow: hidden;"></iframe>
+    <iframe width="100%" height="600" src="footer.html" style="border:none;overflow: hidden;"></iframe>
+  </div>
+
     <!-- JS -->
 
   <script src="assets/js/jquery.min.js"></script>
