--- a/index.html
+++ b/index.html
@@ -198,7 +198,8 @@
 </section>
 <!-- Service End -->
 <div id="iframeDiv">
-    <iframe width="100%" height="1120" src="footer.html" style="border:none;overflow: hidden;"></iframe>
+    <iframe width="100%" height="600" src="advice_white.html" style="border:none;overflow: hidden;"></iframe>
+    <iframe width="100%" height="600" src="footer.html" style="border:none;overflow: hidden;"></iframe>
 </div>
 <!-- JS -->
 <script src="assets/js/jquery.min.js"></script>
