--- a/practicearea.html
+++ b/practicearea.html
@@ -148,7 +148,8 @@
 </section>
 
 <div id="iframeDiv">
-    <iframe width="100%" height="1120" src="footer.html" style="border:none;overflow: hidden;"></iframe>
+    <iframe width="100%" height="600" src="advice_white.html" style="border:none;overflow: hidden;"></iframe>
+    <iframe width="100%" height="600" src="footer.html" style="border:none;overflow: hidden;"></iframe>
 </div>
 
 <script src="assets/js/jquery.min.js"></script>
